--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 .mdl-layout__header-row {
   align-items: center;
   justify-content: center;
@@ -10,17 +11,21 @@
 }
 
 .mdl-ripple {
-  background: #007;
-  opacity: 0.1;
+  background: #000;
+  opacity: 0.001;
 }
 
 body {
-  background-color: yellowgreen;
+  background-color: darkorange;
 }
 
 p {
-  color: blue;
+  color: springgreen;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.5rem;
   padding-top: 5pt;
+}
+
+h3 {
+  color: springgreen;
 }
